@@ -13,14 +13,13 @@ Descent: 410
 LayerCount: 2
 Layer: 0 1 "Back"  1
 Layer: 1 1 "Fore"  0
-NeedsXUIDChange: 1
 XUID: [1021 445 290132255 6927612]
 FSType: 0
 OS2Version: 3
 OS2_WeightWidthSlopeOnly: 0
 OS2_UseTypoMetrics: 1
 CreationTime: 1277899326
-ModificationTime: 1348730022
+ModificationTime: 1349275546
 PfmFamily: 17
 TTFWeight: 700
 TTFWidth: 5
@@ -3699,7 +3698,7 @@ ShortTable: maxp 16
   1
 EndShort
 LangName: 1033 "" "" "Bold Italic" "Ascender - Liberation Mono" "" "Version 2.00.0" "" "Liberation is a trademark of Red Hat, Inc. registered in U.S. Patent and Trademark Office and certain other jurisdictions." "Ascender Corporation" "Steve Matteson" "Based on Cousine, which was designed by Steve Matteson as an innovative, refreshing sans serif design that is metrically compatible with Courier New+ISIA. Cousine offers improved on-screen readability characteristics and the pan-European WGL character set and solves the needs of developers looking for width-compatible fonts to address document portability across platforms." "http://www.ascendercorp.com/" "http://www.ascendercorp.com/typedesigners.html" "Licensed under the SIL Open Font License, Version 1.1" "http://scripts.sil.org/OFL" 
-GaspTable: 3 8 14 14 15 65535 15
+GaspTable: 3 8 2 15 1 65535 3 0
 Encoding: UnicodeBmp
 UnicodeInterp: none
 NameList: Adobe Glyph List
@@ -127183,7 +127182,7 @@ EndChar
 StartChar: S_BE
 Encoding: 65653 -1 2391
 Width: 1229
-Flags: HW
+Flags: W
 LayerCount: 2
 Fore
 SplineSet
@@ -127231,15 +127230,15 @@ EndChar
 StartChar: S_TE
 Encoding: 65654 -1 2392
 Width: 1229
-Flags: HW
+Flags: W
 LayerCount: 2
 Fore
 SplineSet
-249 1371 m 5
- 1255 1371 l 5
- 1223 1203 l 5
- 217 1203 l 5
- 249 1371 l 5
+249 1371 m 5,0,-1
+ 1255 1371 l 5,1,-1
+ 1223 1203 l 5,2,-1
+ 217 1203 l 5,3,-1
+ 249 1371 l 5,0,-1
 EndSplineSet
 Refer: 624 1096 N 1 0 0 1 0 0 2
 EndChar
@@ -127247,15 +127246,15 @@ EndChar
 StartChar: S_PE
 Encoding: 65655 -1 2393
 Width: 1229
-Flags: HW
+Flags: W
 LayerCount: 2
 Fore
 SplineSet
-299 1371 m 1
- 1205 1371 l 1
- 1173 1203 l 1
- 267 1203 l 1
- 299 1371 l 1
+299 1371 m 1,0,-1
+ 1205 1371 l 1,1,-1
+ 1173 1203 l 1,2,-1
+ 267 1203 l 1,3,-1
+ 299 1371 l 1,0,-1
 EndSplineSet
 Refer: 88 117 N 1 0 0 1 0 0 2
 EndChar
