@@ -19,7 +19,7 @@ OS2Version: 3
 OS2_WeightWidthSlopeOnly: 0
 OS2_UseTypoMetrics: 1
 CreationTime: 1277409190
-ModificationTime: 1348651568
+ModificationTime: 1349271436
 PfmFamily: 17
 TTFWeight: 700
 TTFWidth: 5
@@ -3743,7 +3743,7 @@ ShortTable: maxp 16
   1
 EndShort
 LangName: 1033 "" "" "" "Ascender - Liberation Sans" "" "Version 2.00.0" "" "Liberation is a trademark of Red Hat, Inc. registered in U.S. Patent and Trademark Office and certain other jurisdictions." "Ascender Corporation" "Steve Matteson" "Based on Arimo, which was designed by Steve Matteson as an innovative, refreshing sans serif design that is metrically compatible with Arial+ISIA. Arimo offers improved on-screen readability characteristics and the pan-European WGL character set and solves the needs of developers looking for width-compatible fonts to address document portability across platforms." "http://www.ascendercorp.com/" "http://www.ascendercorp.com/typedesigners.html" "Licensed under the SIL Open Font License, Version 1.1" "http://scripts.sil.org/OFL" 
-GaspTable: 3 8 14 14 15 65535 15
+GaspTable: 3 8 2 10 3 65535 3 0
 Encoding: UnicodeBmp
 UnicodeInterp: none
 NameList: Adobe Glyph List
@@ -189765,7 +189765,7 @@ EndChar
 StartChar: S_BE
 Encoding: 65828 -1 2586
 Width: 1242
-Flags: HW
+Flags: W
 LayerCount: 2
 Fore
 SplineSet
