@@ -19,7 +19,7 @@ OS2Version: 3
 OS2_WeightWidthSlopeOnly: 0
 OS2_UseTypoMetrics: 1
 CreationTime: 1277744832
-ModificationTime: 1348662641
+ModificationTime: 1349271530
 PfmFamily: 17
 TTFWeight: 700
 TTFWidth: 5
@@ -3665,7 +3665,7 @@ ShortTable: maxp 16
   1
 EndShort
 LangName: 1033 "" "" "Bold Italic" "Ascender - Liberation Sans" "" "Version 2.00.0" "" "Liberation is a trademark of Red Hat, Inc. registered in U.S. Patent and Trademark Office and certain other jurisdictions." "Ascender Corporation" "Steve Matteson" "Based on Arimo, which was designed by Steve Matteson as an innovative, refreshing sans serif design that is metrically compatible with Arial+ISIA. Arimo offers improved on-screen readability characteristics and the pan-European WGL character set and solves the needs of developers looking for width-compatible fonts to address document portability across platforms." "http://www.ascendercorp.com/" "http://www.ascendercorp.com/typedesigners.html" "Licensed under the SIL Open Font License, Version 1.1" "http://scripts.sil.org/OFL" 
-GaspTable: 2 8 14 65535 15
+GaspTable: 3 8 2 10 1 65535 3 0
 Encoding: UnicodeBmp
 UnicodeInterp: none
 NameList: Adobe Glyph List
@@ -179661,7 +179661,7 @@ EndChar
 StartChar: S_BE
 Encoding: 65828 -1 2586
 Width: 1242
-Flags: HW
+Flags: W
 LayerCount: 2
 Fore
 SplineSet
@@ -179709,15 +179709,15 @@ EndChar
 StartChar: S_TE
 Encoding: 65829 -1 2587
 Width: 1821
-Flags: HW
+Flags: W
 LayerCount: 2
 Fore
 SplineSet
-1763 1203 m 5
- 297 1203 l 5
- 330 1371 l 5
- 1800 1371 l 5
- 1763 1203 l 5
+1763 1203 m 5,0,-1
+ 297 1203 l 5,1,-1
+ 330 1371 l 5,2,-1
+ 1800 1371 l 5,3,-1
+ 1763 1203 l 5,0,-1
 EndSplineSet
 Refer: 621 1096 N 1 0 0 1 0 0 2
 EndChar
@@ -179725,15 +179725,15 @@ EndChar
 StartChar: S_PE
 Encoding: 65830 -1 2588
 Width: 1251
-Flags: HW
+Flags: W
 LayerCount: 2
 Fore
 SplineSet
-1203 1203 m 1
- 284 1203 l 1
- 317 1371 l 1
- 1240 1371 l 1
- 1203 1203 l 1
+1203 1203 m 1,0,-1
+ 284 1203 l 1,1,-1
+ 317 1371 l 1,2,-1
+ 1240 1371 l 1,3,-1
+ 1203 1203 l 1,0,-1
 EndSplineSet
 Refer: 88 117 N 1 0 0 1 0 0 2
 EndChar
