@@ -19,7 +19,7 @@ OS2Version: 3
 OS2_WeightWidthSlopeOnly: 0
 OS2_UseTypoMetrics: 1
 CreationTime: 1277743413
-ModificationTime: 1348660701
+ModificationTime: 1349271481
 PfmFamily: 17
 TTFWeight: 400
 TTFWidth: 5
@@ -3779,7 +3779,7 @@ ShortTable: maxp 16
   1
 EndShort
 LangName: 1033 "" "" "" "Ascender - Liberation Sans" "" "Version 2.00.0" "" "Liberation is a trademark of Red Hat, Inc. registered in U.S. Patent and Trademark Office and certain other jurisdictions." "Ascender Corporation" "Steve Matteson" "Based on Arimo, which was designed by Steve Matteson as an innovative, refreshing sans serif design that is metrically compatible with Arial+ISIA. Arimo offers improved on-screen readability characteristics and the pan-European WGL character set and solves the needs of developers looking for width-compatible fonts to address document portability across platforms." "http://www.ascendercorp.com/" "http://www.ascendercorp.com/typedesigners.html" "Licensed under the SIL Open Font License, Version 1.1" "http://scripts.sil.org/OFL" 
-GaspTable: 3 8 14 14 15 65535 15
+GaspTable: 3 8 2 17 1 65535 3 0
 Encoding: UnicodeBmp
 UnicodeInterp: none
 NameList: Adobe Glyph List
@@ -184491,11 +184491,11 @@ Flags: W
 LayerCount: 2
 Fore
 SplineSet
-287 1239 m 5
- 312 1369 l 5
- 1684 1369 l 5
- 1659 1239 l 5
- 287 1239 l 5
+287 1239 m 5,0,-1
+ 312 1369 l 5,1,-1
+ 1684 1369 l 5,2,-1
+ 1659 1239 l 5,3,-1
+ 287 1239 l 5,0,-1
 EndSplineSet
 Refer: 621 1096 N 1 0 0 1 0 0 2
 EndChar
@@ -184503,15 +184503,15 @@ EndChar
 StartChar: S_PE
 Encoding: 65830 -1 2588
 Width: 1139
-Flags: HWO
+Flags: W
 LayerCount: 2
 Fore
 SplineSet
-307 1239 m 1
- 332 1369 l 1
- 1094 1369 l 1
- 1069 1239 l 1
- 307 1239 l 1
+307 1239 m 1,0,-1
+ 332 1369 l 1,1,-1
+ 1094 1369 l 1,2,-1
+ 1069 1239 l 1,3,-1
+ 307 1239 l 1,0,-1
 EndSplineSet
 Refer: 88 117 N 1 0 0 1 0 0 2
 EndChar
