@@ -13,14 +13,13 @@ Descent: 410
 LayerCount: 2
 Layer: 0 1 "Back"  1
 Layer: 1 1 "Fore"  0
-NeedsXUIDChange: 1
 XUID: [1021 445 290132255 4198436]
 FSType: 0
 OS2Version: 3
 OS2_WeightWidthSlopeOnly: 0
 OS2_UseTypoMetrics: 1
 CreationTime: 1123398000
-ModificationTime: 1348727522
+ModificationTime: 1349275153
 PfmFamily: 17
 TTFWeight: 700
 TTFWidth: 5
@@ -3894,7 +3893,7 @@ ShortTable: maxp 16
   1
 EndShort
 LangName: 1033 "" "" "Bold Italic" "Ascender - Liberation Serif" "" "Version 2.00.0" "" "Liberation is a trademark of Red Hat, Inc. registered in U.S. Patent and Trademark Office and certain other jurisdictions." "Ascender Corporation" "Steve Matteson" "Based on Tinos, which was designed by Steve Matteson as an innovative, refreshing serif design that is metrically compatible with Times New Roman+ISIA. Tinos offers improved on-screen readability characteristics and the pan-European WGL character set and solves the needs of developers looking for width-compatible fonts to address document portability across platforms." "http://www.ascendercorp.com/" "http://www.ascendercorp.com/typedesigners.html" "Licensed under the SIL Open Font License, Version 1.1" "http://scripts.sil.org/OFL" 
-GaspTable: 2 8 14 65535 15
+GaspTable: 3 8 2 17 1 65535 3 0
 Encoding: UnicodeBmp
 UnicodeInterp: none
 NameList: Adobe Glyph List
@@ -191423,7 +191422,7 @@ EndChar
 StartChar: S_BE
 Encoding: 65815 -1 2575
 Width: 1063
-Flags: HW
+Flags: W
 LayerCount: 2
 Fore
 SplineSet
@@ -191482,15 +191481,15 @@ EndChar
 StartChar: S_TE
 Encoding: 65816 -1 2576
 Width: 1706
-Flags: HW
+Flags: W
 LayerCount: 2
 Fore
 SplineSet
-229 1151 m 5
- 255 1301 l 5
- 1693 1301 l 5
- 1667 1151 l 5
- 229 1151 l 5
+229 1151 m 5,0,-1
+ 255 1301 l 5,1,-1
+ 1693 1301 l 5,2,-1
+ 1667 1151 l 5,3,-1
+ 229 1151 l 5,0,-1
 EndSplineSet
 Refer: 623 1096 N 1 0 0 1 0 0 2
 EndChar
@@ -191498,15 +191497,15 @@ EndChar
 StartChar: S_PE
 Encoding: 65817 -1 2577
 Width: 1139
-Flags: HW
+Flags: W
 LayerCount: 2
 Fore
 SplineSet
-229 1151 m 1
- 255 1301 l 1
- 1113 1301 l 1
- 1087 1151 l 1
- 229 1151 l 1
+229 1151 m 1,0,-1
+ 255 1301 l 1,1,-1
+ 1113 1301 l 1,2,-1
+ 1087 1151 l 1,3,-1
+ 229 1151 l 1,0,-1
 EndSplineSet
 Refer: 88 117 N 1 0 0 1 0 0 2
 EndChar
