@@ -19,7 +19,7 @@ OS2Version: 3
 OS2_WeightWidthSlopeOnly: 0
 OS2_UseTypoMetrics: 1
 CreationTime: 1277108302
-ModificationTime: 1348653511
+ModificationTime: 1349275292
 PfmFamily: 17
 TTFWeight: 400
 TTFWidth: 5
@@ -3521,7 +3521,7 @@ ShortTable: maxp 16
   1
 EndShort
 LangName: 1033 "" "" "Regular" "Ascender - Liberation Serif" "" "Version 2.00.0" "" "Liberation is a trademark of Red Hat, Inc. registered in U.S. Patent and Trademark Office and certain other jurisdictions." "Ascender Corporation" "Steve Matteson" "Based on Tinos, which was designed by Steve Matteson as an innovative, refreshing serif design that is metrically compatible with Times New Roman+ISIA. Tinos offers improved on-screen readability characteristics and the pan-European WGL character set and solves the needs of developers looking for width-compatible fonts to address document portability across platforms." "http://www.ascendercorp.com/" "http://www.ascendercorp.com/typedesigners.html" "Licensed under the SIL Open Font License, Version 1.1" "http://scripts.sil.org/OFL" 
-GaspTable: 3 10 14 16 15 65535 15
+GaspTable: 3 10 2 17 1 65535 3 0
 Encoding: UnicodeBmp
 UnicodeInterp: none
 NameList: Adobe Glyph List
@@ -210262,7 +210262,7 @@ EndChar
 StartChar: S_BE
 Encoding: 65815 -1 2574
 Width: 965
-Flags: HW
+Flags: W
 LayerCount: 2
 Fore
 SplineSet
